// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot:  renders Box List Page each time 1`] = `
<DocumentFragment>
  <div
    class="BoxList"
  >
    <form>
      <label
        for="backgroundColor"
      >
        Color:
      </label>
      <input
        id="backgroundColor"
        name="backgroundColor"
        value=""
      />
      <label
        for="width"
      >
        Width:
      </label>
      <input
        id="width"
        name="width"
        type="number"
        value="0"
      />
      <label
        for="height"
      >
        Height:
      </label>
      <input
        id="height"
        name="height"
        type="number"
        value="0"
      />
      <button>
        Add a new box!
      </button>
    </form>
    <div />
  </div>
</DocumentFragment>
`;

exports[`snapshot:  renders boxz each time 1`] = `
<DocumentFragment>
  <div
    class="BoxList"
  >
    <form>
      <label
        for="backgroundColor"
      >
        Color:
      </label>
      <input
        id="backgroundColor"
        name="backgroundColor"
        value=""
      />
      <label
        for="width"
      >
        Width:
      </label>
      <input
        id="width"
        name="width"
        type="number"
        value="0"
      />
      <label
        for="height"
      >
        Height:
      </label>
      <input
        id="height"
        name="height"
        type="number"
        value="0"
      />
      <button>
        Add a new box!
      </button>
    </form>
    <div />
  </div>
</DocumentFragment>
`;

exports[`snapshot:  renders each time 1`] = `
<DocumentFragment>
  <div
    class="BoxList"
  >
    <form>
      <label
        for="backgroundColor"
      >
        Color:
      </label>
      <input
        id="backgroundColor"
        name="backgroundColor"
        value=""
      />
      <label
        for="width"
      >
        Width:
      </label>
      <input
        id="width"
        name="width"
        type="number"
        value="0"
      />
      <label
        for="height"
      >
        Height:
      </label>
      <input
        id="height"
        name="height"
        type="number"
        value="0"
      />
      <button>
        Add a new box!
      </button>
    </form>
    <div />
  </div>
</DocumentFragment>
`;

exports[`snapshot:  renders same form each time 1`] = `
<DocumentFragment>
  <form>
    <label
      for="backgroundColor"
    >
      Color:
    </label>
    <input
      id="backgroundColor"
      name="backgroundColor"
      value=""
    />
    <label
      for="width"
    >
      Width:
    </label>
    <input
      id="width"
      name="width"
      type="number"
      value="0"
    />
    <label
      for="height"
    >
      Height:
    </label>
    <input
      id="height"
      name="height"
      type="number"
      value="0"
    />
    <button>
      Add a new box!
    </button>
  </form>
</DocumentFragment>
`;
